<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.PlacesTogether"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/seed"
    android:id="@+id/friend_element">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/profile_picture_frame"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/friend_avatar_desc" />

    <!-- Username text -->
    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/username_mock"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
        app:layout_constraintStart_toEndOf="@+id/avatar_image"
        app:layout_constraintTop_toTopOf="@+id/avatar_image" />

    <!-- First icon -->
    <ImageView
        android:id="@+id/icon_remove_friend"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_person_remove"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_remove_friend_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>